src/org/stringtemplate/v4/compiler/STParser.java
// $ANTLR ${project.version} ${buildNumber} STParser.g 2010-05-16 14:55:04

package org.stringtemplate.v4.compiler;

import org.antlr.runtime.*;
import org.stringtemplate.v4.STGroup;
import org.stringtemplate.v4.misc.Misc;

import java.util.ArrayList;
import java.util.List;

/** Recognize a single StringTemplate template text, expressions, and conditionals */
public class STParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "IF", "ELSE", "ELSEIF", "ENDIF", "SUPER", "SEMI", "BANG", "ELLIPSIS", "EQUALS", "COLON", "LPAREN", "RPAREN", "LBRACK", "RBRACK", "COMMA", "DOT", "LCURLY", "RCURLY", "TEXT", "LDELIM", "RDELIM", "ID", "STRING", "WS", "PIPE", "OR", "AND", "INDENT", "NEWLINE", "AT", "END"
    };
    public static final int RBRACK=17;
    public static final int LBRACK=16;
    public static final int ELSE=5;
    public static final int ELLIPSIS=11;
    public static final int LCURLY=20;
    public static final int BANG=10;
    public static final int EQUALS=12;
    public static final int TEXT=22;
    public static final int AND=30;
    public static final int ID=25;
    public static final int EOF=-1;
    public static final int SEMI=9;
    public static final int INDENT=31;
    public static final int LPAREN=14;
    public static final int IF=4;
    public static final int ELSEIF=6;
    public static final int AT=33;
    public static final int COLON=13;
    public static final int RPAREN=15;
    public static final int WS=27;
    public static final int NEWLINE=32;
    public static final int COMMA=18;
    public static final int OR=29;
    public static final int RCURLY=21;
    public static final int ENDIF=7;
    public static final int RDELIM=24;
    public static final int PIPE=28;
    public static final int SUPER=8;
    public static final int END=34;
    public static final int DOT=19;
    public static final int LDELIM=23;
    public static final int STRING=26;

    // delegates
    // delegators


        public STParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public STParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        

    public String[] getTokenNames() { return STParser.tokenNames; }
    public String getGrammarFileName() { return "STParser.g"; }


    /** The name of the template enclosing a subtemplate or region. */
    String enclosingTemplateName;
    Compiler gen = Compiler.NOOP_GEN;

    public STParser(TokenStream input, Compiler gen, String enclosingTemplateName) {
        this(input, new RecognizerSharedState(), gen, enclosingTemplateName);
    }
    public STParser(TokenStream input, RecognizerSharedState state, Compiler gen, String enclosingTemplateName) {
        super(null,null); // overcome bug in ANTLR 3.2
    	this.input = input;
    	this.state = state;
        if ( gen!=null ) this.gen = gen;
        this.enclosingTemplateName = enclosingTemplateName;
    }

    public void indent(String indent) {	gen.emit(Bytecode.INSTR_INDENT, indent); }

    protected Object recoverFromMismatchedToken(IntStream input, int ttype, BitSet follow)
    	throws RecognitionException
    {
    	throw new MismatchedTokenException(ttype, input);
    }



    // $ANTLR start "templateAndEOF"
    // STParser.g:73:1: templateAndEOF : template EOF ;
    public final void templateAndEOF() throws RecognitionException {
        try {
            // STParser.g:74:2: ( template EOF )
            // STParser.g:74:4: template EOF
            {
            pushFollow(FOLLOW_template_in_templateAndEOF55);
            template();

            state._fsp--;

            match(input,EOF,FOLLOW_EOF_in_templateAndEOF57); 

            }

        }

           catch (RecognitionException re) { throw re; }
        finally {
        }
        return ;
    }
    // $ANTLR end "templateAndEOF"


    // $ANTLR start "template"
    // STParser.g:77:1: template : ( element )* ;
    public final void template() throws RecognitionException {
        try {
            // STParser.g:78:2: ( ( element )* )
            // STParser.g:78:4: ( element )*
            {
            // STParser.g:78:4: ( element )*
            loop1:
            do {
                int alt1=2;
                switch ( input.LA(1) ) {
                case LDELIM:
                    {
                    int LA1_2 = input.LA(2);

                    if ( (LA1_2==IF||LA1_2==SUPER||LA1_2==LPAREN||LA1_2==LBRACK||LA1_2==LCURLY||(LA1_2>=ID && LA1_2<=STRING)||LA1_2==AT) ) {
                        alt1=1;
                    }


                    }
                    break;
                case INDENT:
                    {
                    int LA1_3 = input.LA(2);

                    if ( (LA1_3==LDELIM) ) {
                        int LA1_5 = input.LA(3);

                        if ( (LA1_5==IF||LA1_5==SUPER||LA1_5==LPAREN||LA1_5==LBRACK||LA1_5==LCURLY||(LA1_5>=ID && LA1_5<=STRING)||LA1_5==AT) ) {
                            alt1=1;
                        }


                    }
                    else if ( (LA1_3==TEXT||LA1_3==NEWLINE) ) {
                        alt1=1;
                    }


                    }
                    break;
                case TEXT:
                case NEWLINE:
                    {
                    alt1=1;
                    }
                    break;

                }

                switch (alt1) {
            	case 1 :
            	    // STParser.g:78:4: element
            	    {
            	    pushFollow(FOLLOW_element_in_template68);
            	    element();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            }

        }

           catch (RecognitionException re) { throw re; }
        finally {
        }
        return ;
    }
    // $ANTLR end "template"


    // $ANTLR start "element"
    // STParser.g:81:1: element : ( (i= INDENT )? ifstat ({...}? NEWLINE )? | i= INDENT exprTag | exprTag | i= INDENT text | text | (i= INDENT )? region | i= INDENT NEWLINE | NEWLINE );
    public final void element() throws RecognitionException {
        CommonToken i=null;
        STParser.ifstat_return ifstat1 = null;

        STParser.region_return region2 = null;


        try {
            // STParser.g:82:2: ( (i= INDENT )? ifstat ({...}? NEWLINE )? | i= INDENT exprTag | exprTag | i= INDENT text | text | (i= INDENT )? region | i= INDENT NEWLINE | NEWLINE )
            int alt5=8;
            alt5 = dfa5.predict(input);
            switch (alt5) {
                case 1 :
                    // STParser.g:82:4: (i= INDENT )? ifstat ({...}? NEWLINE )?
                    {
                    // STParser.g:82:4: (i= INDENT )?
                    int alt2=2;
                    int LA2_0 = input.LA(1);

                    if ( (LA2_0==INDENT) ) {
                        alt2=1;
                    }
                    switch (alt2) {
                        case 1 :
                            // STParser.g:82:6: i= INDENT
                            {
                            i=(CommonToken)match(input,INDENT,FOLLOW_INDENT_in_element84); 

                            }
                            break;

                    }

                    int start_address = gen.address();
                    pushFollow(FOLLOW_ifstat_in_element93);
                    ifstat1=ifstat();

                    state._fsp--;

                    // STParser.g:85:3: ({...}? NEWLINE )?
                    int alt3=2;
                    int LA3_0 = input.LA(1);

                    if ( (LA3_0==NEWLINE) ) {
                        int LA3_1 = input.LA(2);

                        if ( (((ifstat1!=null?((CommonToken)ifstat1.start):null).getLine()!=input.LT(1).getLine())) ) {
                            alt3=1;
                        }
                    }
                    switch (alt3) {
                        case 1 :
                            // STParser.g:85:5: {...}? NEWLINE
                            {
                            if ( !(((ifstat1!=null?((CommonToken)ifstat1.start):null).getLine()!=input.LT(1).getLine())) ) {
                                throw new FailedPredicateException(input, "element", "$ifstat.start.getLine()!=input.LT(1).getLine()");
                            }
                            match(input,NEWLINE,FOLLOW_NEWLINE_in_element104); 

                            }
                            break;

                    }


                    		if ( i!=null && (ifstat1!=null?((CommonToken)ifstat1.start):null).getLine() == input.LT(1).getLine() ) {
                    			// need to emit INDENT if we found indent for IF on one line
                    			gen.insert(start_address, Bytecode.INSTR_INDENT, (i!=null?i.getText():null));
                    			gen.emit(Bytecode.INSTR_DEDENT);
                    		}
                    		

                    }
                    break;
                case 2 :
                    // STParser.g:94:4: i= INDENT exprTag
                    {
                    i=(CommonToken)match(input,INDENT,FOLLOW_INDENT_in_element119); 
                    indent((i!=null?i.getText():null));
                    pushFollow(FOLLOW_exprTag_in_element133);
                    exprTag();

                    state._fsp--;

                    gen.emit(Bytecode.INSTR_DEDENT);

                    }
                    break;
                case 3 :
                    // STParser.g:96:4: exprTag
                    {
                    pushFollow(FOLLOW_exprTag_in_element149);
                    exprTag();

                    state._fsp--;


                    }
                    break;
                case 4 :
                    // STParser.g:97:4: i= INDENT text
                    {
                    i=(CommonToken)match(input,INDENT,FOLLOW_INDENT_in_element156); 
                    indent((i!=null?i.getText():null));
                    pushFollow(FOLLOW_text_in_element170);
                    text();

                    state._fsp--;

                    gen.emit(Bytecode.INSTR_DEDENT);

                    }
                    break;
                case 5 :
                    // STParser.g:99:4: text
                    {
                    pushFollow(FOLLOW_text_in_element189);
                    text();

                    state._fsp--;


                    }
                    break;
                case 6 :
                    // STParser.g:100:6: (i= INDENT )? region
                    {
                    // STParser.g:100:6: (i= INDENT )?
                    int alt4=2;
                    int LA4_0 = input.LA(1);

                    if ( (LA4_0==INDENT) ) {
                        alt4=1;
                    }
                    switch (alt4) {
                        case 1 :
                            // STParser.g:100:7: i= INDENT
                            {
                            i=(CommonToken)match(input,INDENT,FOLLOW_INDENT_in_element199); 
                            indent((i!=null?i.getText():null));

                            }
                            break;

                    }

                    pushFollow(FOLLOW_region_in_element205);
                    region2=region();

                    state._fsp--;


                    						 gen.emit(Bytecode.INSTR_NEW, (region2!=null?region2.name:null),
                    						 		  (region2!=null?((CommonToken)region2.start):null).getStartIndex(), (region2!=null?((CommonToken)region2.stop):null).getStopIndex());
                    						 gen.emit(Bytecode.INSTR_WRITE,
                    						          (region2!=null?((CommonToken)region2.start):null).getStartIndex(),
                    						          (region2!=null?((CommonToken)region2.stop):null).getStartIndex());
                    						 

                    }
                    break;
                case 7 :
                    // STParser.g:108:4: i= INDENT NEWLINE
                    {
                    i=(CommonToken)match(input,INDENT,FOLLOW_INDENT_in_element221); 
                    indent((i!=null?i.getText():null));
                    match(input,NEWLINE,FOLLOW_NEWLINE_in_element236); 
                    gen.emit(Bytecode.INSTR_NEWLINE);
                    gen.emit(Bytecode.INSTR_DEDENT);

                    }
                    break;
                case 8 :
                    // STParser.g:111:4: NEWLINE
                    {
                    match(input,NEWLINE,FOLLOW_NEWLINE_in_element275); 
                    gen.emit(Bytecode.INSTR_NEWLINE);

                    }
                    break;

            }
        }

           catch (RecognitionException re) { throw re; }
        finally {
        }
        return ;
    }
    // $ANTLR end "element"


    // $ANTLR start "text"
    // STParser.g:114:1: text : TEXT ;
    public final void text() throws RecognitionException {
        CommonToken TEXT3=null;

        try {
            // STParser.g:115:2: ( TEXT )
            // STParser.g:115:4: TEXT
            {
            TEXT3=(CommonToken)match(input,TEXT,FOLLOW_TEXT_in_text297); 

            		if ( (TEXT3!=null?TEXT3.getText():null).length()>0 ) {
            			gen.emit(Bytecode.INSTR_LOAD_STR, (TEXT3!=null?TEXT3.getText():null),
            					 TEXT3.getStartIndex(), TEXT3.getStopIndex());
            			gen.emit(Bytecode.INSTR_WRITE,
            					 TEXT3.getStartIndex(),TEXT3.getStopIndex());
            		}
            		

            }

        }

           catch (RecognitionException re) { throw re; }
        finally {
        }
        return ;
    }
    // $ANTLR end "text"


    // $ANTLR start "exprTag"
    // STParser.g:126:1: exprTag : LDELIM expr ( ';' exprOptions | ) RDELIM ;
    public final void exprTag() throws RecognitionException {
        CommonToken LDELIM4=null;

        try {
            // STParser.g:127:2: ( LDELIM expr ( ';' exprOptions | ) RDELIM )
            // STParser.g:127:4: LDELIM expr ( ';' exprOptions | ) RDELIM
            {
            LDELIM4=(CommonToken)match(input,LDELIM,FOLLOW_LDELIM_in_exprTag312); 
            pushFollow(FOLLOW_expr_in_exprTag316);
            expr();

            state._fsp--;

            // STParser.g:129:3: ( ';' exprOptions | )
            int alt6=2;
            int LA6_0 = input.LA(1);

            if ( (LA6_0==SEMI) ) {
                alt6=1;
            }
            else if ( (LA6_0==RDELIM) ) {
                alt6=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 6, 0, input);

                throw nvae;
            }
            switch (alt6) {
                case 1 :
                    // STParser.g:129:5: ';' exprOptions
                    {
                    match(input,SEMI,FOLLOW_SEMI_in_exprTag322); 
                    pushFollow(FOLLOW_exprOptions_in_exprTag324);
                    exprOptions();

                    state._fsp--;

                    gen.emit(Bytecode.INSTR_WRITE_OPT,
                    					  LDELIM4.getStartIndex(),((CommonToken)input.LT(1)).getStartIndex());

                    }
                    break;
                case 2 :
                    // STParser.g:132:5: 
                    {
                    gen.emit(Bytecode.INSTR_WRITE,
                    		              LDELIM4.getStartIndex(),((CommonToken)input.LT(1)).getStartIndex());

                    }
                    break;

            }

            match(input,RDELIM,FOLLOW_RDELIM_in_exprTag343); 

            }

        }

           catch (RecognitionException re) { throw re; }
        finally {
        }
        return ;
    }
    // $ANTLR end "exprTag"

    public static class region_return extends ParserRuleReturnScope {
        public String name;
    };

    // $ANTLR start "region"
    // STParser.g:138:1: region returns [String name] : LDELIM '@' ID RDELIM LDELIM '@end' RDELIM ;
    public final STParser.region_return region() throws RecognitionException {
        STParser.region_return retval = new STParser.region_return();
        retval.start = input.LT(1);

        CommonToken ID5=null;

        try {
            // STParser.g:139:2: ( LDELIM '@' ID RDELIM LDELIM '@end' RDELIM )
            // STParser.g:139:4: LDELIM '@' ID RDELIM LDELIM '@end' RDELIM
            {
            match(input,LDELIM,FOLLOW_LDELIM_in_region359); 
            match(input,AT,FOLLOW_AT_in_region361); 
            ID5=(CommonToken)match(input,ID,FOLLOW_ID_in_region363); 
            match(input,RDELIM,FOLLOW_RDELIM_in_region365); 
            retval.name = gen.compileRegion(enclosingTemplateName, (ID5!=null?ID5.getText():null), input, state);
            match(input,LDELIM,FOLLOW_LDELIM_in_region373); 
            match(input,END,FOLLOW_END_in_region375); 
            match(input,RDELIM,FOLLOW_RDELIM_in_region377); 

            }

            retval.stop = input.LT(-1);

        }

           catch (RecognitionException re) { throw re; }
        finally {
        }
        return retval;
    }
    // $ANTLR end "region"

    public static class subtemplate_return extends ParserRuleReturnScope {
        public String name;
    };

    // $ANTLR start "subtemplate"
    // STParser.g:144:1: subtemplate returns [String name] : '{' (ids+= ID ( ',' ids+= ID )* '|' )? ( INDENT )? '}' ;
    public final STParser.subtemplate_return subtemplate() throws RecognitionException {
        STParser.subtemplate_return retval = new STParser.subtemplate_return();
        retval.start = input.LT(1);

        CommonToken ids=null;
        List list_ids=null;

        try {
            // STParser.g:145:2: ( '{' (ids+= ID ( ',' ids+= ID )* '|' )? ( INDENT )? '}' )
            // STParser.g:145:4: '{' (ids+= ID ( ',' ids+= ID )* '|' )? ( INDENT )? '}'
            {
            match(input,LCURLY,FOLLOW_LCURLY_in_subtemplate393); 
            // STParser.g:145:8: (ids+= ID ( ',' ids+= ID )* '|' )?
            int alt8=2;
            int LA8_0 = input.LA(1);

            if ( (LA8_0==ID) ) {
                alt8=1;
            }
            switch (alt8) {
                case 1 :
                    // STParser.g:145:10: ids+= ID ( ',' ids+= ID )* '|'
                    {
                    ids=(CommonToken)match(input,ID,FOLLOW_ID_in_subtemplate399); 
                    if (list_ids==null) list_ids=new ArrayList();
                    list_ids.add(ids);

                    // STParser.g:145:18: ( ',' ids+= ID )*
                    loop7:
                    do {
                        int alt7=2;
                        int LA7_0 = input.LA(1);

                        if ( (LA7_0==COMMA) ) {
                            alt7=1;
                        }


                        switch (alt7) {
                    	case 1 :
                    	    // STParser.g:145:19: ',' ids+= ID
                    	    {
                    	    match(input,COMMA,FOLLOW_COMMA_in_subtemplate402); 
                    	    ids=(CommonToken)match(input,ID,FOLLOW_ID_in_subtemplate406); 
                    	    if (list_ids==null) list_ids=new ArrayList();
                    	    list_ids.add(ids);


                    	    }
                    	    break;

                    	default :
                    	    break loop7;
                        }
                    } while (true);

                    match(input,PIPE,FOLLOW_PIPE_in_subtemplate410); 

                    }
                    break;

            }

            retval.name = gen.compileAnonTemplate(enclosingTemplateName, input, list_ids, state);
            // STParser.g:147:9: ( INDENT )?
            int alt9=2;
            int LA9_0 = input.LA(1);

            if ( (LA9_0==INDENT) ) {
                alt9=1;
            }
            switch (alt9) {
                case 1 :
                    // STParser.g:147:9: INDENT
                    {
                    match(input,INDENT,FOLLOW_INDENT_in_subtemplate427); 

                    }
                    break;

            }

            match(input,RCURLY,FOLLOW_RCURLY_in_subtemplate439); 

            }

            retval.stop = input.LT(-1);

        }

           catch (RecognitionException re) { throw re; }
        finally {
        }
        return retval;
    }
    // $ANTLR end "subtemplate"


    // $ANTLR start "addTemplateEndTokensToFollowOfTemplateRule"
    // STParser.g:151:1: addTemplateEndTokensToFollowOfTemplateRule : template ( '}' | LDELIM '@end' ) ;
    public final void addTemplateEndTokensToFollowOfTemplateRule() throws RecognitionException {
        try {
            // STParser.g:156:44: ( template ( '}' | LDELIM '@end' ) )
            // STParser.g:156:46: template ( '}' | LDELIM '@end' )
            {
            pushFollow(FOLLOW_template_in_addTemplateEndTokensToFollowOfTemplateRule454);
            template();

            state._fsp--;

            // STParser.g:156:55: ( '}' | LDELIM '@end' )
            int alt10=2;
            int LA10_0 = input.LA(1);

            if ( (LA10_0==RCURLY) ) {
                alt10=1;
            }
            else if ( (LA10_0==LDELIM) ) {
                alt10=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 10, 0, input);

                throw nvae;
            }
            switch (alt10) {
                case 1 :
                    // STParser.g:156:56: '}'
                    {
                    match(input,RCURLY,FOLLOW_RCURLY_in_addTemplateEndTokensToFollowOfTemplateRule457); 

                    }
                    break;
                case 2 :
                    // STParser.g:156:60: LDELIM '@end'
                    {
                    match(input,LDELIM,FOLLOW_LDELIM_in_addTemplateEndTokensToFollowOfTemplateRule459); 
                    match(input,END,FOLLOW_END_in_addTemplateEndTokensToFollowOfTemplateRule461); 

                    }
                    break;

            }


            }

        }

           catch (RecognitionException re) { throw re; }
        finally {
        }
        return ;
    }
    // $ANTLR end "addTemplateEndTokensToFollowOfTemplateRule"

    public static class ifstat_return extends ParserRuleReturnScope {
    };

    // $ANTLR start "ifstat"
    // STParser.g:158:1: ifstat : LDELIM 'if' '(' conditional ')' RDELIM template ( ( INDENT )? LDELIM 'elseif' '(' conditional ')' RDELIM template )* ( ( INDENT )? LDELIM 'else' RDELIM template )? ( INDENT )? endif= LDELIM 'endif' RDELIM ;
    public final STParser.ifstat_return ifstat() throws RecognitionException {
        STParser.ifstat_return retval = new STParser.ifstat_return();
        retval.start = input.LT(1);

        CommonToken endif=null;


            /** Tracks address of branch operand (in code block).  It's how
             *  we backpatch forward references when generating code for IFs.
             */
            int prevBranchOperand = -1;
            /** Branch instruction operands that are forward refs to end of IF.
             *  We need to update them once we see the endif.
             */
            List<Integer> endRefs = new ArrayList<Integer>();

        try {
            // STParser.g:169:2: ( LDELIM 'if' '(' conditional ')' RDELIM template ( ( INDENT )? LDELIM 'elseif' '(' conditional ')' RDELIM template )* ( ( INDENT )? LDELIM 'else' RDELIM template )? ( INDENT )? endif= LDELIM 'endif' RDELIM )
            // STParser.g:169:4: LDELIM 'if' '(' conditional ')' RDELIM template ( ( INDENT )? LDELIM 'elseif' '(' conditional ')' RDELIM template )* ( ( INDENT )? LDELIM 'else' RDELIM template )? ( INDENT )? endif= LDELIM 'endif' RDELIM
            {
            match(input,LDELIM,FOLLOW_LDELIM_in_ifstat477); 
            match(input,IF,FOLLOW_IF_in_ifstat479); 
            match(input,LPAREN,FOLLOW_LPAREN_in_ifstat481); 
            pushFollow(FOLLOW_conditional_in_ifstat483);
            conditional();

            state._fsp--;

            match(input,RPAREN,FOLLOW_RPAREN_in_ifstat485); 
            match(input,RDELIM,FOLLOW_RDELIM_in_ifstat487); 

                    prevBranchOperand = gen.address()+1;
                    gen.emit(Bytecode.INSTR_BRF, -1); // write placeholder as branch target
            		
            pushFollow(FOLLOW_template_in_ifstat495);
            template();

            state._fsp--;

            // STParser.g:175:3: ( ( INDENT )? LDELIM 'elseif' '(' conditional ')' RDELIM template )*
            loop12:
            do {
                int alt12=2;
                int LA12_0 = input.LA(1);

                if ( (LA12_0==INDENT) ) {
                    int LA12_1 = input.LA(2);

                    if ( (LA12_1==LDELIM) ) {
                        int LA12_2 = input.LA(3);

                        if ( (LA12_2==ELSEIF) ) {
                            alt12=1;
                        }


                    }


                }
                else if ( (LA12_0==LDELIM) ) {
                    int LA12_2 = input.LA(2);

                    if ( (LA12_2==ELSEIF) ) {
                        alt12=1;
                    }


                }


                switch (alt12) {
            	case 1 :
            	    // STParser.g:175:5: ( INDENT )? LDELIM 'elseif' '(' conditional ')' RDELIM template
            	    {
            	    // STParser.g:175:5: ( INDENT )?
            	    int alt11=2;
            	    int LA11_0 = input.LA(1);

            	    if ( (LA11_0==INDENT) ) {
            	        alt11=1;
            	    }
            	    switch (alt11) {
            	        case 1 :
            	            // STParser.g:175:5: INDENT
            	            {
            	            match(input,INDENT,FOLLOW_INDENT_in_ifstat501); 

            	            }
            	            break;

            	    }

            	    match(input,LDELIM,FOLLOW_LDELIM_in_ifstat504); 
            	    match(input,ELSEIF,FOLLOW_ELSEIF_in_ifstat506); 
